[gd_scene load_steps=6 format=2]

[ext_resource path="res://Resources/Graphics/Characters/Boshy/solgryn.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Characters/BoshyCharacters/Bosses/Solgryn.gd" type="Script" id=2]
[ext_resource path="res://Resources/Graphics/Other/UI/Healthbar/meter_bar_holder_center-repeating_red.png" type="Texture" id=3]
[ext_resource path="res://Resources/Graphics/Other/UI/Healthbar/meter_bar_center-repeating_red.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 73.0
height = 122.0

[node name="Solgryn" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hurtbox"]
modulate = Color( 0.278431, 0.639216, 0.129412, 1 )
polygon = PoolVector2Array( -41, -169, 92, -141, 90, 137, 47, 168, -93, 119, -91, -150 )

[node name="Health" type="TextureProgress" parent="."]
margin_left = -120.0
margin_top = -221.0
margin_right = 120.0
margin_bottom = -184.0
max_value = 80.0
value = 80.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenSingle" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="WhiteTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="GreenSingle" to="." method="spawn_green_ball_single"]
[connection signal="timeout" from="WhiteTimer" to="." method="spawn_white_ball"]
